arduinoCodeSujet/src/fr/ubordeaux/arduinoCode/Parser.output
Terminaux inutilisés dans la grammaire

    "double"
    "else"
    "foreach"
    "if"
    "in"
    "long"


Grammaire

    0 $accept: program $end

    1 program: list_of_definitions "begin" list_of_stms "end"

    2 list_of_definitions: %empty
    3                    | list_of_definitions definition

    4 list_of_stms: stm
    5             | list_of_stms stm

    6 definition: var_definition
    7           | type_definition
    8           | function_decl
    9           | procedure_decl
   10           | function_definition
   11           | procedure_definition

   12 var_definition: list_of_identifiers ':' type ';'

   13 list_of_identifiers: IDENTIFIER
   14                    | list_of_identifiers ',' IDENTIFIER

   15 type_definition: IDENTIFIER '=' type ';'

   16 function_decl: "function" IDENTIFIER '(' list_of_parameters ')' ':' type ';'

   17 procedure_decl: "procedure" IDENTIFIER '(' list_of_parameters ')' ';'

   18 $@1: %empty

   19 function_definition: "function" IDENTIFIER '(' list_of_parameters ')' ':' type '{' $@1 block '}'

   20 $@2: %empty

   21 procedure_definition: "procedure" IDENTIFIER '(' list_of_parameters ')' '{' $@2 block '}'

   22 list_of_parameters: parameter
   23                   | list_of_parameters ',' parameter

   24 parameter: IDENTIFIER ':' type

   25 block: list_of_stms

   26 type: "boolean"
   27     | number
   28     | "string" '[' INTEGER ']'
   29     | "range" "of" type
   30     | "set" "of" type
   31     | "list" "of" type
   32     | "enum" '(' list_of_identifiers ')'
   33     | "struct" '{' list_of_fields '}'

   34 list_of_fields: field
   35               | list_of_fields field

   36 field: IDENTIFIER ':' type ';'

   37 number: "byte"
   38       | "pin"
   39       | "unsigned" "byte"
   40       | "short"
   41       | "unsigned" "short"
   42       | "integer"
   43       | "unsigned" "integer"
   44       | "float"

   45 stm: left_part "++" ';'
   46    | left_part "--" ';'
   47    | left_part '=' expression ';'
   48    | left_part "+=" expression ';'
   49    | left_part "-=" expression ';'
   50    | left_part "*=" expression ';'
   51    | left_part "/=" expression ';'
   52    | left_part "%=" expression ';'
   53    | left_part "&=" expression ';'
   54    | left_part "|=" expression ';'
   55    | left_part "&&=" expression ';'
   56    | left_part "||=" expression ';'
   57    | ATmega328p_procedure
   58    | "switch" '(' expression ')' '{' list_of_case_stms '}'
   59    | "do" stm "while" '(' expression ')' ';'
   60    | "loop" stm
   61    | "break" ';'
   62    | "continue" ';'
   63    | "return" expression ';'
   64    | '{' list_of_stms '}'
   65    | "while" '(' expression ')' stm

   66 list_of_case_stms: case_stm
   67                  | list_of_case_stms case_stm

   68 case_stm: "case" expression ':' stm

   69 left_part: IDENTIFIER
   70          | IDENTIFIER '[' expression ']'

   71 expression: constant_expression
   72           | left_part
   73           | IDENTIFIER '(' list_of_expressions ')'
   74           | '[' list_of_expressions ']'
   75           | '{' list_of_expressions '}'
   76           | '[' expression ".." expression ']'
   77           | expression '+' expression
   78           | expression '*' expression
   79           | expression '-' expression
   80           | expression '/' expression
   81           | expression '%' expression
   82           | '-' expression
   83           | expression "++"
   84           | expression "--"
   85           | "++" expression
   86           | "--" expression
   87           | expression '<' expression
   88           | expression "<=" expression
   89           | expression '>' expression
   90           | expression ">=" expression
   91           | expression "==" expression
   92           | expression "!=" expression
   93           | expression "<<" expression
   94           | expression ">>" expression
   95           | expression '&' expression
   96           | expression '|' expression
   97           | expression "&&" expression
   98           | expression "||" expression
   99           | '!' expression
  100           | '(' expression ')'
  101           | ATmega328p_expression

  102 list_of_expressions: expression
  103                    | list_of_expressions ',' expression

  104 constant_expression: "TRUE"
  105                    | "FALSE"
  106                    | PIN
  107                    | INTEGER
  108                    | FLOAT
  109                    | STRING

  110 ATmega328p_procedure: "pinMode" '(' expression ',' expression ')' ';'
  111                     | "digitalWrite" '(' expression ',' expression ')' ';'
  112                     | "analogReference" '(' expression ')' ';'
  113                     | "analogWrite" '(' expression ',' expression ')' ';'
  114                     | "peek" '(' ')' ';'
  115                     | "flush" '(' ')' ';'
  116                     | "putc" '(' expression ')' ';'
  117                     | "puts" '(' expression ')' ';'
  118                     | "delay_s" '(' expression ')' ';'
  119                     | "delay_ms" '(' expression ')' ';'

  120 ATmega328p_expression: "LOW"
  121                      | "HIGH"
  122                      | "INPUT"
  123                      | "INPUTPULLUP"
  124                      | "OUTPUT"
  125                      | "digitalRead" '(' expression ')'
  126                      | "analogRead" '(' expression ')'
  127                      | "getc" '(' ')'
  128                      | "available" '(' ')'


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    '!' <Token> (33) 99
    '%' <Token> (37) 81
    '&' <Token> (38) 95
    '(' (40) 16 17 19 21 32 58 59 65 73 100 110 111 112 113 114 115 116 117 118 119 125 126 127 128
    ')' (41) 16 17 19 21 32 58 59 65 73 100 110 111 112 113 114 115 116 117 118 119 125 126 127 128
    '*' <Token> (42) 78
    '+' <Token> (43) 77
    ',' (44) 14 23 103 110 111 113
    '-' <Token> (45) 79 82
    '/' <Token> (47) 80
    ':' <Token> (58) 12 16 19 24 36 68
    ';' (59) 12 15 16 17 36 45 46 47 48 49 50 51 52 53 54 55 56 59 61 62 63 110 111 112 113 114 115 116 117 118 119
    '<' <Token> (60) 87
    '=' <Token> (61) 15 47
    '>' <Token> (62) 89
    '[' (91) 28 70 74 76
    ']' (93) 28 70 74 76
    '{' (123) 19 21 33 58 64 75
    '|' <Token> (124) 96
    '}' (125) 19 21 33 58 64 75
    error (256)
    "<=" <Token> (258) 88
    ">=" <Token> (259) 90
    "==" <Token> (260) 91
    "!=" <Token> (261) 92
    "<<" <Token> (262) 93
    ">>" <Token> (263) 94
    "&&" <Token> (264) 97
    "||" <Token> (265) 98
    "+=" <Token> (266) 48
    "-=" <Token> (267) 49
    "*=" <Token> (268) 50
    "/=" <Token> (269) 51
    "%=" <Token> (270) 52
    "&=" <Token> (271) 53
    "|=" <Token> (272) 54
    "&&=" <Token> (273) 55
    "||=" <Token> (274) 56
    "++" <Token> (275) 45 83 85
    "--" <Token> (276) 46 84 86
    ".." <Token> (277) 76
    "begin" <Token> (278) 1
    "boolean" <Token> (279) 26
    "break" <Token> (280) 61
    "byte" <Token> (281) 37 39
    "case" <Token> (282) 68
    "continue" <Token> (283) 62
    "do" <Token> (284) 59
    "double" <Token> (285)
    "else" <Token> (286)
    "end" <Token> (287) 1
    "enum" <Token> (288) 32
    "FALSE" <Token> (289) 105
    "float" <Token> (290) 44
    "foreach" <Token> (291)
    "function" <Token> (292) 16 19
    "if" <Token> (293)
    "integer" <Token> (294) 42 43
    "in" <Token> (295)
    "list" <Token> (296) 31
    "long" <Token> (297)
    "loop" <Token> (298) 60
    "of" <Token> (299) 29 30 31
    "procedure" <Token> (300) 17 21
    "range" <Token> (301) 29
    "return" <Token> (302) 63
    "set" <Token> (303) 30
    "short" <Token> (304) 40 41
    "struct" <Token> (305) 33
    "string" <Token> (306) 28
    "switch" <Token> (307) 58
    "TRUE" <Token> (308) 104
    "unsigned" <Token> (309) 39 41 43
    "while" <Token> (310) 59 65
    "pinMode" <Token> (311) 110
    "digitalWrite" <Token> (312) 111
    "analogReference" <Token> (313) 112
    "analogWrite" <Token> (314) 113
    "digitalRead" <Token> (315) 125
    "analogRead" <Token> (316) 126
    "LOW" <Token> (317) 120
    "HIGH" <Token> (318) 121
    "INPUT" <Token> (319) 122
    "INPUTPULLUP" <Token> (320) 123
    "OUTPUT" <Token> (321) 124
    "pin" <Token> (322) 38
    "getc" <Token> (323) 127
    "available" <Token> (324) 128
    "peek" <Token> (325) 114
    "flush" <Token> (326) 115
    "putc" <Token> (327) 116
    "puts" <Token> (328) 117
    "delay_ms" <Token> (329) 119
    "delay_s" <Token> (330) 118
    IDENTIFIER <String> (331) 13 14 15 16 17 19 21 24 36 69 70 73
    INTEGER <Long> (332) 28 107
    PIN <Integer> (333) 106
    FLOAT <Float> (334) 108
    STRING <String> (335) 109
    HIGHER_THAN_NOT (336)
    HIGHER_THAN_MINUS (337)


Non-terminaux, suivis des règles où ils apparaissent

    $accept (103)
        à gauche: 0
    program (104)
        à gauche: 1
        à droite: 0
    list_of_definitions (105)
        à gauche: 2 3
        à droite: 1 3
    list_of_stms <List<Stm> > (106)
        à gauche: 4 5
        à droite: 1 5 25 64
    definition (107)
        à gauche: 6 7 8 9 10 11
        à droite: 3
    var_definition (108)
        à gauche: 12
        à droite: 6
    list_of_identifiers <List<String> > (109)
        à gauche: 13 14
        à droite: 12 14 32
    type_definition (110)
        à gauche: 15
        à droite: 7
    function_decl (111)
        à gauche: 16
        à droite: 8
    procedure_decl (112)
        à gauche: 17
        à droite: 9
    function_definition (113)
        à gauche: 19
        à droite: 10
    $@1 (114)
        à gauche: 18
        à droite: 19
    procedure_definition (115)
        à gauche: 21
        à droite: 11
    $@2 (116)
        à gauche: 20
        à droite: 21
    list_of_parameters <List<TypeFIELD> > (117)
        à gauche: 22 23
        à droite: 16 17 19 21 23
    parameter <TypeFIELD> (118)
        à gauche: 24
        à droite: 22 23
    block (119)
        à gauche: 25
        à droite: 19 21
    type <Type> (120)
        à gauche: 26 27 28 29 30 31 32 33
        à droite: 12 15 16 19 24 29 30 31 36
    list_of_fields <List<TypeFIELD> > (121)
        à gauche: 34 35
        à droite: 33 35
    field <TypeFIELD> (122)
        à gauche: 36
        à droite: 34 35
    number <Type> (123)
        à gauche: 37 38 39 40 41 42 43 44
        à droite: 27
    stm <Stm> (124)
        à gauche: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
        à droite: 4 5 59 60 65 68
    list_of_case_stms <List<StmCASE> > (125)
        à gauche: 66 67
        à droite: 58 67
    case_stm <StmCASE> (126)
        à gauche: 68
        à droite: 66 67
    left_part <Expr> (127)
        à gauche: 69 70
        à droite: 45 46 47 48 49 50 51 52 53 54 55 56 72
    expression <Expr> (128)
        à gauche: 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101
        à droite: 47 48 49 50 51 52 53 54 55 56 58 59 63 65 68 70 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 102 103 110 111 112 113 116 117 118 119 125 126
    list_of_expressions <List<Expr> > (129)
        à gauche: 102 103
        à droite: 73 74 75 103
    constant_expression <ExprCONSTANT> (130)
        à gauche: 104 105 106 107 108 109
        à droite: 71
    ATmega328p_procedure <Expr> (131)
        à gauche: 110 111 112 113 114 115 116 117 118 119
        à droite: 57
    ATmega328p_expression <Expr> (132)
        à gauche: 120 121 122 123 124 125 126 127 128
        à droite: 101


État 0

    0 $accept: • program $end
    1 program: • list_of_definitions "begin" list_of_stms "end"
    2 list_of_definitions: • %empty
    3                    | • list_of_definitions definition

    $défaut  réduction par utilisation de la règle 2 (list_of_definitions)

    program              aller à l'état 1
    list_of_definitions  aller à l'état 2


État 1

    0 $accept: program • $end

    $end  décalage et aller à l'état 3


État 2

    1 program: list_of_definitions • "begin" list_of_stms "end"
    3 list_of_definitions: list_of_definitions • definition
    6 definition: • var_definition
    7           | • type_definition
    8           | • function_decl
    9           | • procedure_decl
   10           | • function_definition
   11           | • procedure_definition
   12 var_definition: • list_of_identifiers ':' type ';'
   13 list_of_identifiers: • IDENTIFIER
   14                    | • list_of_identifiers ',' IDENTIFIER
   15 type_definition: • IDENTIFIER '=' type ';'
   16 function_decl: • "function" IDENTIFIER '(' list_of_parameters ')' ':' type ';'
   17 procedure_decl: • "procedure" IDENTIFIER '(' list_of_parameters ')' ';'
   19 function_definition: • "function" IDENTIFIER '(' list_of_parameters ')' ':' type '{' $@1 block '}'
   21 procedure_definition: • "procedure" IDENTIFIER '(' list_of_parameters ')' '{' $@2 block '}'

    "begin"      décalage et aller à l'état 4
    "function"   décalage et aller à l'état 5
    "procedure"  décalage et aller à l'état 6
    IDENTIFIER   décalage et aller à l'état 7

    definition            aller à l'état 8
    var_definition        aller à l'état 9
    list_of_identifiers   aller à l'état 10
    type_definition       aller à l'état 11
    function_decl         aller à l'état 12
    procedure_decl        aller à l'état 13
    function_definition   aller à l'état 14
    procedure_definition  aller à l'état 15


État 3

    0 $accept: program $end •

    $défaut  accepter


État 4

    1 program: list_of_definitions "begin" • list_of_stms "end"
    4 list_of_stms: • stm
    5             | • list_of_stms stm
   45 stm: • left_part "++" ';'
   46    | • left_part "--" ';'
   47    | • left_part '=' expression ';'
   48    | • left_part "+=" expression ';'
   49    | • left_part "-=" expression ';'
   50    | • left_part "*=" expression ';'
   51    | • left_part "/=" expression ';'
   52    | • left_part "%=" expression ';'
   53    | • left_part "&=" expression ';'
   54    | • left_part "|=" expression ';'
   55    | • left_part "&&=" expression ';'
   56    | • left_part "||=" expression ';'
   57    | • ATmega328p_procedure
   58    | • "switch" '(' expression ')' '{' list_of_case_stms '}'
   59    | • "do" stm "while" '(' expression ')' ';'
   60    | • "loop" stm
   61    | • "break" ';'
   62    | • "continue" ';'
   63    | • "return" expression ';'
   64    | • '{' list_of_stms '}'
   65    | • "while" '(' expression ')' stm
   69 left_part: • IDENTIFIER
   70          | • IDENTIFIER '[' expression ']'
  110 ATmega328p_procedure: • "pinMode" '(' expression ',' expression ')' ';'
  111                     | • "digitalWrite" '(' expression ',' expression ')' ';'
  112                     | • "analogReference" '(' expression ')' ';'
  113                     | • "analogWrite" '(' expression ',' expression ')' ';'
  114                     | • "peek" '(' ')' ';'
  115                     | • "flush" '(' ')' ';'
  116                     | • "putc" '(' expression ')' ';'
  117                     | • "puts" '(' expression ')' ';'
  118                     | • "delay_s" '(' expression ')' ';'
  119                     | • "delay_ms" '(' expression ')' ';'

    "break"            décalage et aller à l'état 16
    "continue"         décalage et aller à l'état 17
    "do"               décalage et aller à l'état 18
    "loop"             décalage et aller à l'état 19
    "return"           décalage et aller à l'état 20
    "switch"           décalage et aller à l'état 21
    "while"            décalage et aller à l'état 22
    "pinMode"          décalage et aller à l'état 23
    "digitalWrite"     décalage et aller à l'état 24
    "analogReference"  décalage et aller à l'état 25
    "analogWrite"      décalage et aller à l'état 26
    "peek"             décalage et aller à l'état 27
    "flush"            décalage et aller à l'état 28
    "putc"             décalage et aller à l'état 29
    "puts"             décalage et aller à l'état 30
    "delay_ms"         décalage et aller à l'état 31
    "delay_s"          décalage et aller à l'état 32
    IDENTIFIER         décalage et aller à l'état 33
    '{'                décalage et aller à l'état 34

    list_of_stms          aller à l'état 35
    stm                   aller à l'état 36
    left_part             aller à l'état 37
    ATmega328p_procedure  aller à l'état 38


État 5

   16 function_decl: "function" • IDENTIFIER '(' list_of_parameters ')' ':' type ';'
   19 function_definition: "function" • IDENTIFIER '(' list_of_parameters ')' ':' type '{' $@1 block '}'

    IDENTIFIER  décalage et aller à l'état 39


État 6

   17 procedure_decl: "procedure" • IDENTIFIER '(' list_of_parameters ')' ';'
   21 procedure_definition: "procedure" • IDENTIFIER '(' list_of_parameters ')' '{' $@2 block '}'

    IDENTIFIER  décalage et aller à l'état 40


État 7

   13 list_of_identifiers: IDENTIFIER •
   15 type_definition: IDENTIFIER • '=' type ';'

    '='  décalage et aller à l'état 41

    $défaut  réduction par utilisation de la règle 13 (list_of_identifiers)


État 8

    3 list_of_definitions: list_of_definitions definition •

    $défaut  réduction par utilisation de la règle 3 (list_of_definitions)


État 9

    6 definition: var_definition •

    $défaut  réduction par utilisation de la règle 6 (definition)


État 10

   12 var_definition: list_of_identifiers • ':' type ';'
   14 list_of_identifiers: list_of_identifiers • ',' IDENTIFIER

    ':'  décalage et aller à l'état 42
    ','  décalage et aller à l'état 43


État 11

    7 definition: type_definition •

    $défaut  réduction par utilisation de la règle 7 (definition)


État 12

    8 definition: function_decl •

    $défaut  réduction par utilisation de la règle 8 (definition)


État 13

    9 definition: procedure_decl •

    $défaut  réduction par utilisation de la règle 9 (definition)


État 14

   10 definition: function_definition •

    $défaut  réduction par utilisation de la règle 10 (definition)


État 15

   11 definition: procedure_definition •

    $défaut  réduction par utilisation de la règle 11 (definition)


État 16

   61 stm: "break" • ';'

    ';'  décalage et aller à l'état 44


État 17

   62 stm: "continue" • ';'

    ';'  décalage et aller à l'état 45


État 18

   45 stm: • left_part "++" ';'
   46    | • left_part "--" ';'
   47    | • left_part '=' expression ';'
   48    | • left_part "+=" expression ';'
   49    | • left_part "-=" expression ';'
   50    | • left_part "*=" expression ';'
   51    | • left_part "/=" expression ';'
   52    | • left_part "%=" expression ';'
   53    | • left_part "&=" expression ';'
   54    | • left_part "|=" expression ';'
   55    | • left_part "&&=" expression ';'
   56    | • left_part "||=" expression ';'
   57    | • ATmega328p_procedure
   58    | • "switch" '(' expression ')' '{' list_of_case_stms '}'
   59    | • "do" stm "while" '(' expression ')' ';'
   59    | "do" • stm "while" '(' expression ')' ';'
   60    | • "loop" stm
   61    | • "break" ';'
   62    | • "continue" ';'
   63    | • "return" expression ';'
   64    | • '{' list_of_stms '}'
   65    | • "while" '(' expression ')' stm
   69 left_part: • IDENTIFIER
   70          | • IDENTIFIER '[' expression ']'
  110 ATmega328p_procedure: • "pinMode" '(' expression ',' expression ')' ';'
  111                     | • "digitalWrite" '(' expression ',' expression ')' ';'
  112                     | • "analogReference" '(' expression ')' ';'
  113                     | • "analogWrite" '(' expression ',' expression ')' ';'
  114                     | • "peek" '(' ')' ';'
  115                     | • "flush" '(' ')' ';'
  116                     | • "putc" '(' expression ')' ';'
  117                     | • "puts" '(' expression ')' ';'
  118                     | • "delay_s" '(' expression ')' ';'
  119                     | • "delay_ms" '(' expression ')' ';'

    "break"            décalage et aller à l'état 16
    "continue"         décalage et aller à l'état 17
    "do"               décalage et aller à l'état 18
    "loop"             décalage et aller à l'état 19
    "return"           décalage et aller à l'état 20
    "switch"           décalage et aller à l'état 21
    "while"            décalage et aller à l'état 22
    "pinMode"          décalage et aller à l'état 23
    "digitalWrite"     décalage et aller à l'état 24
    "analogReference"  décalage et aller à l'état 25
    "analogWrite"      décalage et aller à l'état 26
    "peek"             décalage et aller à l'état 27
    "flush"            décalage et aller à l'état 28
    "putc"             décalage et aller à l'état 29
    "puts"             décalage et aller à l'état 30
    "delay_ms"         décalage et aller à l'état 31
    "delay_s"          décalage et aller à l'état 32
    IDENTIFIER         décalage et aller à l'état 33
    '{'                décalage et aller à l'état 34

    stm                   aller à l'état 46
    left_part             aller à l'état 37
    ATmega328p_procedure  aller à l'état 38


État 19

   45 stm: • left_part "++" ';'
   46    | • left_part "--" ';'
   47    | • left_part '=' expression ';'
   48    | • left_part "+=" expression ';'
   49    | • left_part "-=" expression ';'
   50    | • left_part "*=" expression ';'
   51    | • left_part "/=" expression ';'
   52    | • left_part "%=" expression ';'
   53    | • left_part "&=" expression ';'
   54    | • left_part "|=" expression ';'
   55    | • left_part "&&=" expression ';'
   56    | • left_part "||=" expression ';'
   57    | • ATmega328p_procedure
   58    | • "switch" '(' expression ')' '{' list_of_case_stms '}'
   59    | • "do" stm "while" '(' expression ')' ';'
   60    | • "loop" stm
   60    | "loop" • stm
   61    | • "break" ';'
   62    | • "continue" ';'
   63    | • "return" expression ';'
   64    | • '{' list_of_stms '}'
   65    | • "while" '(' expression ')' stm
   69 left_part: • IDENTIFIER
   70          | • IDENTIFIER '[' expression ']'
  110 ATmega328p_procedure: • "pinMode" '(' expression ',' expression ')' ';'
  111                     | • "digitalWrite" '(' expression ',' expression ')' ';'
  112                     | • "analogReference" '(' expression ')' ';'
  113                     | • "analogWrite" '(' expression ',' expression ')' ';'
  114                     | • "peek" '(' ')' ';'
  115                     | • "flush" '(' ')' ';'
  116                     | • "putc" '(' expression ')' ';'
  117                     | • "puts" '(' expression ')' ';'
  118                     | • "delay_s" '(' expression ')' ';'
  119                     | • "delay_ms" '(' expression ')' ';'

    "break"            décalage et aller à l'état 16
    "continue"         décalage et aller à l'état 17
    "do"               décalage et aller à l'état 18
    "loop"             décalage et aller à l'état 19
    "return"           décalage et aller à l'état 20
    "switch"           décalage et aller à l'état 21
    "while"            décalage et aller à l'état 22
    "pinMode"          décalage et aller à l'état 23
    "digitalWrite"     décalage et aller à l'état 24
    "analogReference"  décalage et aller à l'état 25
    "analogWrite"      décalage et aller à l'état 26
    "peek"             décalage et aller à l'état 27
    "flush"            décalage et aller à l'état 28
    "putc"             décalage et aller à l'état 29
    "puts"             décalage et aller à l'état 30
    "delay_ms"         décalage et aller à l'état 31
    "delay_s"          décalage et aller à l'état 32
    IDENTIFIER         décalage et aller à l'état 33
    '{'                décalage et aller à l'état 34

    stm                   aller à l'état 47
    left_part             aller à l'état 37
    ATmega328p_procedure  aller à l'état 38


État 20

   63 stm: "return" • expression ';'
   69 left_part: • IDENTIFIER
   70          | • IDENTIFIER '[' expression ']'
   71 expression: • constant_expression
   72           | • left_part
   73           | • IDENTIFIER '(' list_of_expressions ')'
   74           | • '[' list_of_expressions ']'
   75           | • '{' list_of_expressions '}'
   76           | • '[' expression ".." expression ']'
   77           | • expression '+' expression
   78           | • expression '*' expression
   79           | • expression '-' expression
   80           | • expression '/' expression
   81           | • expression '%' expression
   82           | • '-' expression
   83           | • expression "++"
   84           | • expression "--"
   85           | • "++" expression
   86           | • "--" expression
   87           | • expression '<' expression
   88           | • expression "<=" expression
   89           | • expression '>' expression
   90           | • expression ">=" expression
   91           | • expression "==" expression
   92           | • expression "!=" expression
   93           | • expression "<<" expression
   94           | • expression ">>" expression
   95           | • expression '&' expression
   96           | • expression '|' expression
   97           | • expression "&&" expression
   98           | • expression "||" expression
   99           | • '!' expression
  100           | • '(' expression ')'
  101           | • ATmega328p_expression
  104 constant_expression: • "TRUE"
  105                    | • "FALSE"
  106                    | • PIN
  107                    | • INTEGER
  108                    | • FLOAT
  109                    | • STRING
  120 ATmega328p_expression: • "LOW"
  121                      | • "HIGH"
  122                      | • "INPUT"
  123                      | • "INPUTPULLUP"
  124                      | • "OUTPUT"
  125                      | • "digitalRead" '(' expression ')'
  126                      | • "analogRead" '(' expression ')'
  127                      | • "getc" '(' ')'
  128                      | • "available" '(' ')'

    '!'            décalage et aller à l'état 48
    '-'            décalage et aller à l'état 49
    "++"           décalage et aller à l'état 50
    "--"           décalage et aller à l'état 51
    "FALSE"        décalage et aller à l'état 52
    "TRUE"         décalage et aller à l'état 53
    "digitalRead"  décalage et aller à l'état 54
    "analogRead"   décalage et aller à l'état 55
    "LOW"          décalage et aller à l'état 56
    "HIGH"         décalage et aller à l'état 57
    "INPUT"        décalage et aller à l'état 58
    "INPUTPULLUP"  décalage et aller à l'état 59
    "OUTPUT"       décalage et aller à l'état 60
    "getc"         décalage et aller à l'état 61
    "available"    décalage et aller à l'état 62
    IDENTIFIER     décalage et aller à l'état 63
    INTEGER        décalage et aller à l'état 64
    PIN            décalage et aller à l'état 65
    FLOAT          décalage et aller à l'état 66
    STRING         décalage et aller à l'état 67
    '('            décalage et aller à l'état 68
    '{'            décalage et aller à l'état 69
    '['            décalage et aller à l'état 70

    left_part              aller à l'état 71
    expression             aller à l'état 72
    constant_expression    aller à l'état 73
    ATmega328p_expression  aller à l'état 74


État 21

   58 stm: "switch" • '(' expression ')' '{' list_of_case_stms '}'

    '('  décalage et aller à l'état 75


État 22

   65 stm: "while" • '(' expression ')' stm

    '('  décalage et aller à l'état 76


État 23

  110 ATmega328p_procedure: "pinMode" • '(' expression ',' expression ')' ';'

    '('  décalage et aller à l'état 77


État 24

  111 ATmega328p_procedure: "digitalWrite" • '(' expression ',' expression ')' ';'

    '('  décalage et aller à l'état 78


État 25

  112 ATmega328p_procedure: "analogReference" • '(' expression ')' ';'

    '('  décalage et aller à l'état 79


État 26

  113 ATmega328p_procedure: "analogWrite" • '(' expression ',' expression ')' ';'

    '('  décalage et aller à l'état 80


État 27

  114 ATmega328p_procedure: "peek" • '(' ')' ';'

    '('  décalage et aller à l'état 81


État 28

  115 ATmega328p_procedure: "flush" • '(' ')' ';'

    '('  décalage et aller à l'état 82


État 29

  116 ATmega328p_procedure: "putc" • '(' expression ')' ';'

    '('  décalage et aller à l'état 83


État 30

  117 ATmega328p_procedure: "puts" • '(' expression ')' ';'

    '('  décalage et aller à l'état 84


État 31

  119 ATmega328p_procedure: "delay_ms" • '(' expression ')' ';'

    '('  décalage et aller à l'état 85


État 32

  118 ATmega328p_procedure: "delay_s" • '(' expression ')' ';'

    '('  décalage et aller à l'état 86


État 33

   69 left_part: IDENTIFIER •
   70          | IDENTIFIER • '[' expression ']'

    '['  décalage et aller à l'état 87

    $défaut  réduction par utilisation de la règle 69 (left_part)


État 34

    4 list_of_stms: • stm
    5             | • list_of_stms stm
   45 stm: • left_part "++" ';'
   46    | • left_part "--" ';'
   47    | • left_part '=' expression ';'
   48    | • left_part "+=" expression ';'
   49    | • left_part "-=" expression ';'
   50    | • left_part "*=" expression ';'
   51    | • left_part "/=" expression ';'
   52    | • left_part "%=" expression ';'
   53    | • left_part "&=" expression ';'
   54    | • left_part "|=" expression ';'
   55    | • left_part "&&=" expression ';'
   56    | • left_part "||=" expression ';'
   57    | • ATmega328p_procedure
   58    | • "switch" '(' expression ')' '{' list_of_case_stms '}'
   59    | • "do" stm "while" '(' expression ')' ';'
   60    | • "loop" stm
   61    | • "break" ';'
   62    | • "continue" ';'
   63    | • "return" expression ';'
   64    | • '{' list_of_stms '}'
   64    | '{' • list_of_stms '}'
   65    | • "while" '(' expression ')' stm
   69 left_part: • IDENTIFIER
   70          | • IDENTIFIER '[' expression ']'
  110 ATmega328p_procedure: • "pinMode" '(' expression ',' expression ')' ';'
  111                     | • "digitalWrite" '(' expression ',' expression ')' ';'
  112                     | • "analogReference" '(' expression ')' ';'
  113                     | • "analogWrite" '(' expression ',' expression ')' ';'
  114                     | • "peek" '(' ')' ';'
  115                     | • "flush" '(' ')' ';'
  116                     | • "putc" '(' expression ')' ';'
  117                     | • "puts" '(' expression ')' ';'
  118                     | • "delay_s" '(' expression ')' ';'
  119                     | • "delay_ms" '(' expression ')' ';'

    "break"            décalage et aller à l'état 16
    "continue"         décalage et aller à l'état 17
    "do"               décalage et aller à l'état 18
    "loop"             décalage et aller à l'état 19
    "return"           décalage et aller à l'état 20
    "switch"           décalage et aller à l'état 21
    "while"            décalage et aller à l'état 22
    "pinMode"          décalage et aller à l'état 23
    "digitalWrite"     décalage et aller à l'état 24
    "analogReference"  décalage et aller à l'état 25
    "analogWrite"      décalage et aller à l'état 26
    "peek"             décalage et aller à l'état 27
    "flush"            décalage et aller à l'état 28
    "putc"             décalage et aller à l'état 29
    "puts"             décalage et aller à l'état 30
    "delay_ms"         décalage et aller à l'état 31
    "delay_s"          décalage et aller à l'état 32
    IDENTIFIER         décalage et aller à l'état 33
    '{'                décalage et aller à l'état 34

    list_of_stms          aller à l'état 88
    stm                   aller à l'état 36
    left_part             aller à l'état 37
    ATmega328p_procedure  aller à l'état 38


État 35

    1 program: list_of_definitions "begin" list_of_stms • "end"
    5 list_of_stms: list_of_stms • stm
   45 stm: • left_part "++" ';'
   46    | • left_part "--" ';'
   47    | • left_part '=' expression ';'
   48    | • left_part "+=" expression ';'
   49    | • left_part "-=" expression ';'
   50    | • left_part "*=" expression ';'
   51    | • left_part "/=" expression ';'
   52    | • left_part "%=" expression ';'
   53    | • left_part "&=" expression ';'
   54    | • left_part "|=" expression ';'
   55    | • left_part "&&=" expression ';'
   56    | • left_part "||=" expression ';'
   57    | • ATmega328p_procedure
   58    | • "switch" '(' expression ')' '{' list_of_case_stms '}'
   59    | • "do" stm "while" '(' expression ')' ';'
   60    | • "loop" stm
   61    | • "break" ';'
   62    | • "continue" ';'
   63    | • "return" expression ';'
   64    | • '{' list_of_stms '}'
   65    | • "while" '(' expression ')' stm
   69 left_part: • IDENTIFIER
   70          | • IDENTIFIER '[' expression ']'
  110 ATmega328p_procedure: • "pinMode" '(' expression ',' expression ')' ';'
  111                     | • "digitalWrite" '(' expression ',' expression ')' ';'
  112                     | • "analogReference" '(' expression ')' ';'
  113                     | • "analogWrite" '(' expression ',' expression ')' ';'
  114                     | • "peek" '(' ')' ';'
  115                     | • "flush" '(' ')' ';'
  116                     | • "putc" '(' expression ')' ';'
  117                     | • "puts" '(' expression ')' ';'
  118                     | • "delay_s" '(' expression ')' ';'
  119                     | • "delay_ms" '(' expression ')' ';'

    "break"            décalage et aller à l'état 16
    "continue"         décalage et aller à l'état 17
    "do"               décalage et aller à l'état 18
    "end"              décalage et aller à l'état 89
    "loop"             décalage et aller à l'état 19
    "return"           décalage et aller à l'état 20
    "switch"           décalage et aller à l'état 21
    "while"            décalage et aller à l'état 22
    "pinMode"          décalage et aller à l'état 23
    "digitalWrite"     décalage et aller à l'état 24
    "analogReference"  décalage et aller à l'état 25
    "analogWrite"      décalage et aller à l'état 26
    "peek"             décalage et aller à l'état 27
    "flush"            décalage et aller à l'état 28
    "putc"             décalage et aller à l'état 29
    "puts"             décalage et aller à l'état 30
    "delay_ms"         décalage et aller à l'état 31
    "delay_s"          décalage et aller à l'état 32
    IDENTIFIER         décalage et aller à l'état 33
    '{'                décalage et aller à l'état 34

    stm                   aller à l'état 90
    left_part             aller à l'état 37
    ATmega328p_procedure  aller à l'état 38


État 36

    4 list_of_stms: stm •

    $défaut  réduction par utilisation de la règle 4 (list_of_stms)


État 37

   45 stm: left_part • "++" ';'
   46    | left_part • "--" ';'
   47    | left_part • '=' expression ';'
   48    | left_part • "+=" expression ';'
   49    | left_part • "-=" expression ';'
   50    | left_part • "*=" expression ';'
   51    | left_part • "/=" expression ';'
   52    | left_part • "%=" expression ';'
   53    | left_part • "&=" expression ';'
   54    | left_part • "|=" expression ';'
   55    | left_part • "&&=" expression ';'
   56    | left_part • "||=" expression ';'
